--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "next-contentlayer": "^0.3.4",
     "next-mdx-remote": "^5.0.0",
     "next-themes": "^0.2.1",
+    "pathname": "^0.9.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "rehype-pretty-code": "^0.13.2",
