--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "pathname": "^0.9.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.4.0",
     "rehype-pretty-code": "^0.13.2",
     "shiki": "^1.10.1",
     "swiper": "^8.4.7",
