--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/node": "^20.10.4",
     "@types/react": "^18.2.42",
     "@types/react-dom": "^18.2.17",
+    "@vercel/analytics": "^1.4.1",
     "aos": "^3.0.0-beta.6",
     "contentlayer": "^0.3.2",
     "date-fns": "^3.6.0",
