--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "aos": "^3.0.0-beta.6",
     "contentlayer": "^0.3.2",
     "date-fns": "^3.6.0",
+    "mixpanel": "^0.18.0",
     "next": "^14.0.3",
     "next-contentlayer": "^0.3.4",
     "next-mdx-remote": "^5.0.0",
