--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     }
   },
   "dependencies": {
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@headlessui/react": "^2.1.2",
     "@mdx-js/loader": "^3.0.1",
     "@mdx-js/react": "^3.0.1",
@@ -34,6 +36,7 @@
     "next-themes": "^0.2.1",
     "pathname": "^0.9.0",
     "react": "^18.3.1",
+    "react-country-flag": "^3.1.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "rehype-pretty-code": "^0.13.2",
